<resources>
    <string name="app_name">Votestatistics</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="imgVoting">Voiting</string>
    <string name="User">User name</string>
    <string name="Pasword">Pasword</string>
    <string name="registrese">Sign up</string>
    <string name="olvidePasword">I forgot my password</string>
    <string name="imgRegister">Register</string>
    <string name="userName">User Name</string>
    <string name="NameStudent">Name Student</string>
    <string name="Grade">Grade</string>
    <string name="buttonRegistrase">Add User</string>
    <string name="password">Password</string>
    <string name="buttonIngresar">Login</string>
    <string name="imguserlogin">UserLogin</string>
    <string name="buttonFloatting">ButtonFloatting</string>
    <string name="first_name">First Name</string>
    <string name="candidateName">First Name</string>
    <string name="candidateLastName">Last Name</string>
    <string name="votingCard">Voting Card Number</string>
    <string name="AddCadidate">Add Candidate</string>
    <string name="textViewId">1</string>
    <string name="firstName_txt">Jorge</string>
    <string name="textViewlastName">Gao</string>
    <string name="textViewAge">(31)</string>
    <string name="ImageSelect">ImageSelect</string>
    <string name="Update_first_name">Update first name</string>
    <string name="Update_last_nme">Update last name</string>
    <string name="Update_votingCard">Update Voting Card Number</string>
    <string name="Update">Update</string>
    <string name="delete">Delete</string>
</resources>